--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -8,8 +8,8 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/about_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/about"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
